Actions
Bug #10729
closeddev: NULL pointer errors
Start date:
2019-04-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/fs/dev/sdev_ptsops.c: In function 'devpts_prunedir': ../../common/fs/dev/sdev_ptsops.c:231:41: error: comparison between pointer and integer [-Werror] if (rw_tryupgrade(&ddv->sdev_contents) == NULL) { ^~ ../../common/fs/dev/sdev_netops.c: In function 'devnet_filldir': ../../common/fs/dev/sdev_netops.c:254:41: error: comparison between pointer and integer [-Werror] if (rw_tryupgrade(&ddv->sdev_contents) == NULL) { ^~ ../../common/fs/dev/sdev_ipnetops.c: In function 'devipnet_filldir': ../../common/fs/dev/sdev_ipnetops.c:161:41: error: comparison between pointer and integer [-Werror] if (rw_tryupgrade(&ddv->sdev_contents) == NULL) { ^~ ../../common/fs/dev/sdev_vtops.c: In function 'devvt_cleandir': ../../common/fs/dev/sdev_vtops.c:367:42: error: comparison between pointer and integer [-Werror] if (rw_tryupgrade(&sdvp->sdev_contents) == NULL) { ^~ ../../common/fs/dev/sdev_vtops.c:411:49: error: comparison between pointer and integer [-Werror] if ((strcmp(dv->sdev_name, DEVVT_ACTIVE_NAME) == NULL)) ^~ ../../common/fs/dev/sdev_vtops.c:413:51: error: comparison between pointer and integer [-Werror] if ((strcmp(dv->sdev_name, DEVVT_CONSUSER_NAME) == NULL)) ^~ ../../common/fs/dev/sdev_zvolops.c: In function 'devzvol_create_pool_dirs': ../../common/fs/dev/sdev_zvolops.c:465:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] devzvol_zclist = NULL; ^ ../../common/fs/dev/sdev_profile.c: In function 'copyin_nvlist': ../../common/fs/dev/sdev_profile.c:900:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 814e7298d2cac68e7d15905df9bcb7dde9175811
commit 814e7298d2cac68e7d15905df9bcb7dde9175811 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:02:34.000Z 10729 dev: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions